--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/morpho-data-structures"]
+	path = lib/morpho-data-structures
+	url = https://github.com/morpho-dao/morpho-data-structures
+[submodule "lib/BokkyPooBahsRedBlackTreeLibrary"]
+	path = lib/BokkyPooBahsRedBlackTreeLibrary
+	url = https://github.com/bokkypoobah/BokkyPooBahsRedBlackTreeLibrary
