--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,5 @@ out = 'out'
 libs = ['lib']
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+optimizer = false
+optimizer_runs = 20_000
